// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationConfirmationPage shows error message for duplicate username 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="rmd-grid"
      style="--rmd-grid-cols: 1;"
    >
      <div
        class="rmd-card rmd-card--shadowed rmd-grid__cell"
      >
        <header
          class="rmd-card__header rmd-card__header--center"
        >
          <span
            class="rmd-card__header-content"
          >
            <h5
              class="rmd-card__title"
            >
              Complete Registration
            </h5>
          </span>
        </header>
        <div
          class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
        >
          <div
            class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
          >
            Please enter the following to complete your registration
          </div>
          <form>
            <div
              class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
            >
              <ul
                class="error-message"
              />
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label rmd-text-field-container--outline-left"
                  style="flex-grow: 1;"
                >
                  <span
                    class="rmd-text-field-addon rmd-text-field-addon--presentational"
                  >
                    <span
                      class="material-symbols"
                    >
                      alternate_email
                    </span>
                  </span>
                  <label
                    class="rmd-label rmd-label--disabled rmd-floating-label rmd-floating-label--active"
                    for="email"
                  >
                    Email
                  </label>
                  <input
                    autocomplete="email"
                    class="rmd-text-field rmd-text-field--floating"
                    disabled=""
                    id="email"
                    type="email"
                    value="a@b.com"
                  />
                </div>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--error rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-error rmd-text-field-container--outline-left"
                  style="flex-grow: 1;"
                >
                  <span
                    class="rmd-text-field-addon rmd-text-field-addon--presentational"
                  >
                    <span
                      class="material-symbols"
                    >
                      person
                    </span>
                  </span>
                  <label
                    class="rmd-label rmd-label--error rmd-floating-label rmd-floating-label--active"
                    for="username"
                  >
                    Username
                  </label>
                  <input
                    autocomplete="username"
                    class="rmd-text-field rmd-text-field--floating"
                    id="username"
                    maxlength="64"
                    minlength="3"
                    name="username"
                    required=""
                    type="text"
                    value="the_username"
                  />
                </div>
              </div>
              <div
                aria-live="polite"
                class="rmd-form-message rmd-form-message--error rmd-form-message--outline"
                id="username--message"
              >
                <p
                  class="rmd-form-message__message"
                  id="username--message-message"
                >
                  The username is already in use: the_username
                </p>
              </div>
              <div
                class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-left rmd-text-field-container--outline-right rmd-password rmd-password--offset"
              >
                <span
                  class="rmd-text-field-addon rmd-text-field-addon--presentational"
                >
                  <span
                    class="material-symbols"
                  >
                    password
                  </span>
                </span>
                <label
                  class="rmd-label rmd-floating-label rmd-floating-label--active rmd-floating-label--inactive"
                  for="password"
                >
                  Password
                </label>
                <input
                  autocomplete="new-password"
                  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
                  id="password"
                  maxlength="64"
                  minlength="6"
                  name="password"
                  required=""
                  type="password"
                  value="password"
                />
                <button
                  aria-label="Show password"
                  aria-pressed="false"
                  class="rmd-button rmd-button--icon rmd-password__toggle"
                  id="password-password-toggle"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="rmd-icon rmd-icon--font material-icons"
                  >
                    remove_red_eye
                  </i>
                  <span
                    class="rmd-ripple-container"
                  />
                </button>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
                  style="flex-grow: 1;"
                >
                  <label
                    class="rmd-label rmd-floating-label rmd-floating-label--active rmd-floating-label--inactive"
                    for="long-name"
                  >
                    Full Name
                  </label>
                  <input
                    autocomplete="name"
                    class="rmd-text-field rmd-text-field--floating"
                    id="long-name"
                    maxlength="64"
                    name="longName"
                    required=""
                    type="text"
                    value="Testius Maximus IV"
                  />
                </div>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
                  style="flex-grow: 1;"
                >
                  <label
                    class="rmd-label rmd-floating-label rmd-floating-label--active rmd-floating-label--inactive"
                    for="short-name"
                  >
                    First Name
                  </label>
                  <input
                    autocomplete="given-name"
                    class="rmd-text-field rmd-text-field--floating"
                    id="short-name"
                    maxlength="32"
                    name="shortName"
                    type="text"
                    value="Testy"
                  />
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="does-accept-terms"
                      name="doesAcceptTerms"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="does-accept-terms"
                  >
                    <div>
                      I have read and agree to the
                       
                      <a
                        class="text-link"
                        href="https://docs.howdju.com/policies/user-agreement"
                        rel="noreferrer"
                        target="_blank"
                      >
                        User Agreement
                      </a>
                       
                      and the
                       
                      <a
                        class="text-link"
                        href="https://docs.howdju.com/policies/privacy-policy"
                        rel="noreferrer"
                        target="_blank"
                      >
                        Privacy Policy
                      </a>
                      .
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="is-13-years-or-older"
                      name="is13YearsOrOlder"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="is-13-years-or-older"
                  >
                    <div>
                      I am 13 years old or older.
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="has-majority-consent"
                      name="hasMajorityConsent"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="has-majority-consent"
                  >
                    <div>
                      I am old enough in my local jurisdiction to enter into legal agreements and to consent to the processing of my personal data.
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="is-not-gdpr"
                      name="isNotGdpr"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="is-not-gdpr"
                  >
                    <div>
                      I am not located in the European Union (EU), the European Economic Area (EEA), or in any other jurisdiction that is subject to the General Data Protection Regulation (GDPR). (See
                       
                      <a
                        class="text-link"
                        href="https://github.com/Howdju/howdju/issues/24"
                        rel="noreferrer"
                        target="_blank"
                      >
                        Github issue #24
                      </a>
                      .)
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="rmd-card__actions"
            >
              <button
                class="rmd-button rmd-button--text rmd-button--text-primary"
                type="button"
              >
                Cancel
                <span
                  class="rmd-ripple-container"
                />
              </button>
              <button
                class="rmd-button rmd-button--text rmd-button--contained rmd-button--primary"
                title="Submit"
                type="submit"
              >
                Complete Registration
                <span
                  class="rmd-ripple-container"
                />
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows error message for missing registration code 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="rmd-grid"
      style="--rmd-grid-cols: 1;"
    >
      <div
        class="rmd-card rmd-card--shadowed rmd-grid__cell"
      >
        <header
          class="rmd-card__header rmd-card__header--center"
        >
          <span
            class="rmd-card__header-content"
          >
            <h5
              class="rmd-card__title"
            >
              Complete Registration
            </h5>
          </span>
        </header>
        <div
          class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
        >
          <span
            class="error-message"
          >
            Missing registration code
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows form 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="rmd-grid"
      style="--rmd-grid-cols: 1;"
    >
      <div
        class="rmd-card rmd-card--shadowed rmd-grid__cell"
      >
        <header
          class="rmd-card__header rmd-card__header--center"
        >
          <span
            class="rmd-card__header-content"
          >
            <h5
              class="rmd-card__title"
            >
              Complete Registration
            </h5>
          </span>
        </header>
        <div
          class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
        >
          <div
            class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
          >
            Please enter the following to complete your registration
          </div>
          <form>
            <div
              class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
            >
              <ul
                class="error-message"
              />
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label rmd-text-field-container--outline-left"
                  style="flex-grow: 1;"
                >
                  <span
                    class="rmd-text-field-addon rmd-text-field-addon--presentational"
                  >
                    <span
                      class="material-symbols"
                    >
                      alternate_email
                    </span>
                  </span>
                  <label
                    class="rmd-label rmd-label--disabled rmd-floating-label rmd-floating-label--active"
                    for="email"
                  >
                    Email
                  </label>
                  <input
                    autocomplete="email"
                    class="rmd-text-field rmd-text-field--floating"
                    disabled=""
                    id="email"
                    type="email"
                    value="the-email@domain.com"
                  />
                </div>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-left"
                  style="flex-grow: 1;"
                >
                  <span
                    class="rmd-text-field-addon rmd-text-field-addon--presentational"
                  >
                    <span
                      class="material-symbols"
                    >
                      person
                    </span>
                  </span>
                  <label
                    class="rmd-label rmd-floating-label"
                    for="username"
                  >
                    Username
                  </label>
                  <input
                    autocomplete="username"
                    class="rmd-text-field rmd-text-field--floating"
                    id="username"
                    maxlength="64"
                    minlength="3"
                    name="username"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-left rmd-text-field-container--outline-right rmd-password rmd-password--offset"
              >
                <span
                  class="rmd-text-field-addon rmd-text-field-addon--presentational"
                >
                  <span
                    class="material-symbols"
                  >
                    password
                  </span>
                </span>
                <label
                  class="rmd-label rmd-floating-label"
                  for="password"
                >
                  Password
                </label>
                <input
                  autocomplete="new-password"
                  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
                  id="password"
                  maxlength="64"
                  minlength="6"
                  name="password"
                  required=""
                  type="password"
                  value=""
                />
                <button
                  aria-label="Show password"
                  aria-pressed="false"
                  class="rmd-button rmd-button--icon rmd-password__toggle"
                  id="password-password-toggle"
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    class="rmd-icon rmd-icon--font material-icons"
                  >
                    remove_red_eye
                  </i>
                  <span
                    class="rmd-ripple-container"
                  />
                </button>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
                  style="flex-grow: 1;"
                >
                  <label
                    class="rmd-label rmd-floating-label"
                    for="long-name"
                  >
                    Full Name
                  </label>
                  <input
                    autocomplete="name"
                    class="rmd-text-field rmd-text-field--floating"
                    id="long-name"
                    maxlength="64"
                    name="longName"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                style="display: flex;"
              >
                <div
                  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
                  style="flex-grow: 1;"
                >
                  <label
                    class="rmd-label rmd-floating-label"
                    for="short-name"
                  >
                    First Name
                  </label>
                  <input
                    autocomplete="given-name"
                    class="rmd-text-field rmd-text-field--floating"
                    id="short-name"
                    maxlength="32"
                    name="shortName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="does-accept-terms"
                      name="doesAcceptTerms"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="does-accept-terms"
                  >
                    <div>
                      I have read and agree to the
                       
                      <a
                        class="text-link"
                        href="https://docs.howdju.com/policies/user-agreement"
                        rel="noreferrer"
                        target="_blank"
                      >
                        User Agreement
                      </a>
                       
                      and the
                       
                      <a
                        class="text-link"
                        href="https://docs.howdju.com/policies/privacy-policy"
                        rel="noreferrer"
                        target="_blank"
                      >
                        Privacy Policy
                      </a>
                      .
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="is-13-years-or-older"
                      name="is13YearsOrOlder"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="is-13-years-or-older"
                  >
                    <div>
                      I am 13 years old or older.
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="has-majority-consent"
                      name="hasMajorityConsent"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="has-majority-consent"
                  >
                    <div>
                      I am old enough in my local jurisdiction to enter into legal agreements and to consent to the processing of my personal data.
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="howdju-checkbox"
              >
                <div
                  class="rmd-toggle-container"
                >
                  <span
                    class="rmd-toggle"
                  >
                    <input
                      class="rmd-toggle__input"
                      id="is-not-gdpr"
                      name="isNotGdpr"
                      type="checkbox"
                    />
                    <span
                      class="rmd-toggle__icon rmd-toggle__icon--overlay"
                    >
                      <i
                        aria-hidden="true"
                        class="rmd-icon rmd-icon--font material-icons"
                      >
                        check_box
                      </i>
                    </span>
                    <span
                      class="rmd-ripple-container"
                    />
                  </span>
                  <label
                    class="rmd-label"
                    for="is-not-gdpr"
                  >
                    <div>
                      I am not located in the European Union (EU), the European Economic Area (EEA), or in any other jurisdiction that is subject to the General Data Protection Regulation (GDPR). (See
                       
                      <a
                        class="text-link"
                        href="https://github.com/Howdju/howdju/issues/24"
                        rel="noreferrer"
                        target="_blank"
                      >
                        Github issue #24
                      </a>
                      .)
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="rmd-card__actions"
            >
              <button
                class="rmd-button rmd-button--text rmd-button--text-primary"
                type="button"
              >
                Cancel
                <span
                  class="rmd-ripple-container"
                />
              </button>
              <button
                aria-disabled="true"
                class="rmd-button rmd-button--text rmd-button--contained rmd-button--disabled"
                title="Please complete the form to continue"
                type="submit"
              >
                Complete Registration
                <span
                  class="rmd-ripple-container"
                />
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows success message upon confirmation. 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="rmd-grid"
      style="--rmd-grid-cols: 1;"
    >
      <div
        class="rmd-card rmd-card--shadowed rmd-grid__cell"
      >
        <header
          class="rmd-card__header rmd-card__header--center"
        >
          <span
            class="rmd-card__header-content"
          >
            <h5
              class="rmd-card__title"
            >
              Complete Registration
            </h5>
          </span>
        </header>
        <div
          class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
        >
          <div
            class="rmd-card__content rmd-card__content--padded rmd-card__content--extra-padding rmd-card__content--remove-margin"
          >
            You are now logged in.
          </div>
          <div
            class="rmd-card__actions"
          >
            <button
              class="rmd-button rmd-button--text rmd-button--contained rmd-button--primary"
              href="/recent-activity"
              type="button"
            >
              Go to recent activity
              <span
                class="rmd-ripple-container"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
